--- a/views/url.ejs
+++ b/views/url.ejs
@@ -13,7 +13,8 @@
 
   <body>
     <h1>Welcome to Schoodle</h1>
-    <a href="/newevent" class="next">Schedule an event</a>
+      <h3>URL page</h3>
+
 
   </body>
 </html>
