--- a/views/option.ejs
+++ b/views/option.ejs
@@ -13,7 +13,6 @@
 
   <body>
     <h1>Welcome to Schoodle</h1>
-    <a href="/newevent" class="next">Schedule an event</a>
-
+      <h3>option page</h3>
   </body>
 </html>
