--- a/views/times.ejs
+++ b/views/times.ejs
@@ -13,7 +13,7 @@
 
   <body>
     <h1>Welcome to Schoodle</h1>
-    <a href="/newevent" class="next">Schedule an event</a>
-
+      <a href="#" class="previous">&laquo; Previous</a>
+      <a href="#" class="next">Next &raquo;</a>
   </body>
 </html>
