--- a/views/newevent.ejs
+++ b/views/newevent.ejs
@@ -16,7 +16,7 @@
     <h2>Create a new event!</h2>
       <form action="/newevent" method="POST">
         <h3> Title </h3>
-        <input class="form-control" type="text" name="Title" style="width: 300px">
+        <input class="form-control" type="text" name="title" style="width: 300px">
         <h3> Description (optional) </h3>
         <input class="form-control" type="text" name="description" style="width: 300px">
         <h3> Location (optional) </h3>
