--- a/views/dates.ejs
+++ b/views/dates.ejs
@@ -27,16 +27,7 @@
       <form method = "POST" action="/:eventID/dates">
         <h3>Bootstrap Multi Select Date Picker</h3>
         pick the date
-        <input type="text" class="form-control date" name = "date" placeholder="Pick the date">
-<!--         pick the time
-        <input type="text" class="form-control" name = "time" placeholder="Pick the time">
-
-pick the date
-        <input type="text" class="form-control date" name = "date" placeholder="Pick the date">
-        pick the time
-        <input type="text" class="form-control" name = "time" placeholder="Pick the time">
-        <input type="text" class="form-control" name = "time" placeholder="Pick the time">
- -->
+        <input type="text" class="form-control date" name = <%= id[0].id %> placeholder="Pick the date">
       <button type="submit" class="btn btn-primary">Back</button>
       <button type="submit" class="btn btn-primary">Next</button>
      </form>
