changed to url to restfull

--- a/views/dates.ejs
+++ b/views/dates.ejs
@@ -29,7 +29,7 @@
         pick the date
         <input type="text" class="form-control date" name = <%= id[0].id %> placeholder="Pick the date">
       <button type="submit" class="btn btn-primary">Back</button>
-      <button type="submit" class="btn btn-primary">Next</button>
+      <button type="submit" class="btn btn-primary">continue</button>
      </form>
 
     </div>
