--- a/views/newevent.ejs
+++ b/views/newevent.ejs
@@ -13,7 +13,7 @@
 
   <body>
     <h1>Welcome to Schoodle</h1>
-    <h2>Create a new event!</h2>
+    <h2>What’s the occasion?</h2>
       <form action="/newevent" method="POST">
         <h3> Title </h3>
         <input class="form-control" type="text" name="title" style="width: 300px">
