--- a/views/times.ejs
+++ b/views/times.ejs
@@ -6,10 +6,11 @@
     <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
     <link rel="stylesheet" href="/vendor/border-box.css" type="text/css" />
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/index.css" type="text/css" />
 
     <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
     <script type="text/javascript" src="/scripts/app.js"></script>
-    <script type="text/javascript" src="/scripts/retrivedates.js"></script>
+
 
 
   </head>
@@ -17,19 +18,18 @@
   <body>
     <h1>Welcome to Schoodle</h1>
 
-<section class="testt">
 
-</section>
+Pick a time
+  <form method = "POST" action="/:eventID/times">
+    <% for(let element of dates){ %>
+      <li><%= element.date %> <input class="form-control" type="text" name= <%= element.id %>>
+                              <input class="form-control" type="text" name= <%= element.id %>>
 
-timeeeeeeeeeeeeeeeeeeeeee
-<form method = "POST" action="/:eventID/times">
-  <% for(let element of dates){ %>
-    <li><%= element.date %> <input class="form-control" type="text" name=<%= element.id %>> <input class="form-control" type="text" name=<%= element.id %>></li>
-  <% } %>
-  <!-- <button type="submit" class="btn btn-primary">Back</button> -->
-  <button type="submit" class="btn btn-primary">Next</button>
-</form>
+  </li>
+    <% } %>
 
+    <button type="submit" class="btn btn-primary">continue</button>
+  </form>
 
 
 
