--- a/views/times.ejs
+++ b/views/times.ejs
@@ -24,7 +24,7 @@ Pick a time
     <% for(let element of dates){ %>
       <li><%= element.date %> <input class="form-control" type="text" name= <%= element.id %>>
                               <input class="form-control" type="text" name= <%= element.id %>>
-                              <button type="button" onclick="myFunction()">Add new time</button>
+                              <button type="button" onclick="myFunction(element)">Add new time</button>
   </li>
     <% } %>
     <button type="submit" class="btn btn-primary">Back</button>
@@ -33,7 +33,7 @@ Pick a time
 
 
    <script>
-    function myFunction() {
+    function myFunction(element) {
       var extra = document.createElement("input");
       document.body.appendChild(extra);
       extra.setAttribute('placeholder', <%= element.date %>);
