--- a/views/times.ejs
+++ b/views/times.ejs
@@ -22,7 +22,7 @@
 </section>
 
 timeeeeeeeeeeeeeeeeeeeeee
-<form method = "POST" action="/:eventID/times">
+<form method = "POST" action="/events/:eventID/times">
   <% for(let element of dates){ %>
     <li><%= element.date %> <input class="form-control" type="text" name=<%= element.id %>> <input class="form-control" type="text" name=<%= element.id %>></li>
   <% } %>
