Fixing Routes, getting cookies completed.

--- a/views/dates.ejs
+++ b/views/dates.ejs
@@ -24,7 +24,7 @@
 
 
     <div class="container">
-      <form method = "POST" action="/:eventID/dates">
+      <form method = "POST" action="/events/dates/<%=eventURL%>">
         <h3>Bootstrap Multi Select Date Picker</h3>
         pick the date
         <input type="text" class="form-control date" name = "date" placeholder="Pick the date">
