--- a/views/option.ejs
+++ b/views/option.ejs
@@ -23,7 +23,7 @@
 
     Potential Times: </br>
     <%datedata.forEach(element => {%>
-    Date: <%=element.start_date%> at <%=element.start_time%> </br>
+    Date: <%=element.date%> at <%=element.start_time%> </br>
     <%});%>
 
   </body>
