--- a/views/option.ejs
+++ b/views/option.ejs
@@ -8,23 +8,12 @@
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
 
     <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
-    <script type="text/javascript" src="/scripts/app.js"></script>
+    <script type="text/javascript" src="/scripts/voteTest.js"></script>
   </head>
 
   <body>
-    <h1>Welcome to Schoodle</h1>
-    <h3>Lets figure out the options!</h3>
-    Event: </br>
-    <%= eventTitle%> </br></br>
-    Description </br>
-    <%= eventDescription%></br></br>
-    Where: </br>
-    <%= eventLocation%></br></br>
 
-    Potential Times: </br>
-    <%datedata.forEach(element => {%>
-    Date: <%=element.date%> at <%=element.start_time%> </br>
-    <%});%>
+  <div class="jsonbox"></div>
 
   </body>
 </html>
