--- a/views/dates.ejs
+++ b/views/dates.ejs
@@ -3,35 +3,41 @@
   <head>
     <title>Home Page</title>
 
-    <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <link rel="stylesheet" href="/vendor/border-box.css" type="text/css" />
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.8.0/css/bootstrap-datepicker.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/dates.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/datepicker.css" type="text/css" />
+
 
     <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
-
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.8.0/js/bootstrap-datepicker.js"></script>
-
     <script type="text/javascript" src="/scripts/app.js"></script>
 
 
   </head>
 
   <body>
+
+        <!-- Top nav bar (fixed) -->
+    <nav id="nav-bar">
+      <img class="logo" src="/images/logo.png">
+      <span class="header fixed">Schoodle</span>
+      <a class="btn"><i class="fas fa-paper-plane"></i> Contact us</a>
+    </nav>
+
+
     <h1>Welcome to Schoodle</h1>
-
-
-
 
     <div class="container">
 
       <form method = "POST" action="/events/dates/<%= url %>/<%= id[0].events_id %>">
 
-        <h3>Bootstrap Multi Select Date Picker</h3>
-        pick the date
-        <input type="text" class="form-control date" placeholder="Pick the date" name = <%= id[0].events_id %>>
-      <button type="submit" class="btn btn-primary">Back</button>
-      <button type="submit" class="btn btn-primary">continue</button>
+        <h3>pick the date</h3>
+        <ul><input id='b' type="text" class="form-control date" placeholder="Pick the date" name = <%= id[0].events_id %>></ul>
+      <ul><button id='a' type="submit" class="btn btn-primary">continue</button></ul>
      </form>
 
     </div>
