--- a/views/newevent.ejs
+++ b/views/newevent.ejs
@@ -3,29 +3,44 @@
   <head>
     <title>Home Page</title>
 
-    <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <link rel="stylesheet" href="/vendor/border-box.css" type="text/css" />
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/newevent.css" type="text/css" />
 
     <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
     <script type="text/javascript" src="/scripts/app.js"></script>
   </head>
 
   <body>
-    <h1>Welcome to Schoodle</h1>
-    <h2>What’s the occasion?</h2>
-      <form action="/newevent" method="POST">
-        <h3> Title </h3>
-        <input class="form-control" type="text" name="title" style="width: 300px">
-        <h3> Description (optional) </h3>
-        <input class="form-control" type="text" name="description" style="width: 300px">
-        <h3> Location (optional) </h3>
-        <input class="form-control" type="text" name="location" style="width: 300px">
-        <h3> Your name </h3>
-        <input class="form-control" type="text" name="name" style="width: 300px">
-        <h3> Your E-mail address </h3>
-        <input class="form-control" type="text" name="email" style="width: 300px">
-        <button type="submit" class="btn btn-primary">Create Event</button>
-      </form>
+
+        <!-- Top nav bar (fixed) -->
+    <nav id="nav-bar">
+      <img class="logo" src="/images/logo.png">
+      <span class="header fixed">Schoodle</span>
+      <a class="btn"><i class="fas fa-paper-plane"></i> Contact us</a>
+    </nav>
+
+
+    <main class="container">
+
+      <h2>What’s the occasion?</h2>
+        <form action="/newevent" method="POST">
+          <h4> Title </h4>
+          <input class="form-control" type="text" name="title" style="width: 300px">
+          <h4> Description (optional) </h4>
+          <input class="form-control" type="text" name="description" style="width: 300px">
+          <h4> Location (optional) </h4>
+          <input class="form-control" type="text" name="location" style="width: 300px">
+          <h4> Your name </h4>
+          <input class="form-control" type="text" name="name" style="width: 300px">
+          <h4> Your E-mail address </h4>
+          <input class="form-control" type="text" name="email" style="width: 300px">
+          <ul><button id='a' type="submit" >Create Event</button></ul>
+        </form>
+
+      </main>
   </body>
 </html>
