--- a/views/times.ejs
+++ b/views/times.ejs
@@ -3,10 +3,12 @@
   <head>
     <title>Home Page</title>
 
-    <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <link rel="stylesheet" href="/vendor/border-box.css" type="text/css" />
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
-    <link rel="stylesheet" href="/styles/index.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/times.css" type="text/css" />
 
     <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
     <script type="text/javascript" src="/scripts/app.js"></script>
@@ -16,16 +18,26 @@
   </head>
 
   <body>
-    <h1>Welcome to Schoodle</h1>
 
-    <h3>Pick a time</h3>
+        <!-- Top nav bar (fixed) -->
+    <nav id="nav-bar">
+      <img class="logo" src="/images/logo.png">
+      <span class="header fixed">Schoodle</span>
+      <a class="btn"><i class="fas fa-paper-plane"></i> Contact us</a>
+    </nav>
+
+
+
+    <h1>something here</h1>
+
+    <h3 class='left'>Pick a time</h3>
 
   <form method = "POST" action="/events/times/<%= eventURL %>">
     <% for(let element of dates){ %>
-        <li><%= element.date %></li>
-        <li id=<%= element.id %> ><input class="form-control" type="text" name= <%= element.id %>>
-                                  <input class="form-control" type="text" name= <%= element.id %>></li>
-        <li><button type="button" onclick="myFunction('<%= element.id %>')">Add new time</button></li>
+        <ul id='date'><%= element.date %></ul>
+        <ul id=<%= element.id %> ><input class="time form-control" type="text" name= <%= element.id %>>
+                                  <input class="time form-control" type="text" name= <%= element.id %>></ul>
+        <ul><button type="button" onclick="myFunction('<%= element.id %>')">Add new time</button></ul>
     <% } %>
     <button type="submit" class="btn btn-primary">Back</button>
     <button type="submit" class="btn btn-primary">continue</button>
@@ -37,6 +49,7 @@
       var newInput = document.createElement("input");
       document.getElementById(data).appendChild(newInput);
       newInput.setAttribute('name', data);
+      newInput.setAttribute('class', "time form-control");
     }
     </script>
   </body>
