Creating basic layout with object. Added option buttons with relevant info.

--- a/views/option.ejs
+++ b/views/option.ejs
@@ -13,7 +13,19 @@
 
   <body>
 
-  <div class="jsonbox"></div>
+  <h1>Schoodle event</h1>
+  <h2>Event Title</h2>
+  <div class="title"></div>
+  <br>
+  <h2>Description:</h2>
+  <div class="description"></div>
+  <br>
+  <h2>Where:</h2>
+  <div class="location"></div>
+  <br>
+  <hr>
+  <br>
+  <div class="voteBox"></div>
 
   </body>
 </html>
