--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,12 +24,9 @@
 
   <body>
 
-        <!-- Top nav bar (fixed) -->
-    <nav id="nav-bar">
-      <img class="logo" src="/images/logo.png">
-      <span class="header fixed">Schoodle</span>
-      <a class="btn"><i class="fas fa-paper-plane"></i> Contact us</a>
-    </nav>
+    <header>
+      <% include ./partials/_nav %>
+    </header>
 
     <main class="container">
 
