--- a/public/styles/newevent.css
+++ b/public/styles/newevent.css
@@ -1,6 +1,6 @@
 .container {
   width: 60%;
-  height: 35em;
+  height: 40em;
   background-color: white;
   padding: 1em;
   margin-top: 3em;
@@ -18,25 +18,31 @@ form {
   transform: translate(-50%, 0);
 }
 
-#a {
-  background-color: #62c767;
-  color: white;
-  font-size: 1.5em;
-  border-radius: 0.2em;
-  border: none;
-  margin-top: 0.3em;
-
-  position: absolute;
-  left: 50%;
-  transform: translate(-50%, 0);
+.fa-feather {
+  color: #62c767;
+  padding-right: 0.3em;
 }
 
-#a:hover {
-  background-color: #74e079;
-  color: white;
-  text-decoration: none;
+.fa-edit {
+  color: #62c767;
+  padding-right: 0.2em;
 }
 
-#a:active {
-  box-shadow: inset 0 3px 5px rgba(0,0,0,.125);
+.fa-map-pin {
+  color: #62c767;
+  padding-right: 0.7em;
 }
+
+.fa-user {
+  color: #62c767;
+  padding-right: 0.3em;
+}
+
+.fa-envelope-open-text {
+  color: #62c767;
+  padding-right: 0.2em;
+}
+ #a {
+  margin-top: 1.4em;
+  width: 100%;
+ }
