--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -15,6 +15,7 @@
   color: white;
   border-radius: 0.15em;
   padding: 0.3em 0.7em;
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 
   position: absolute;
   left: 50%;
