--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -1,6 +1,6 @@
 body {
   background-image: url(../images/events.png);
-  background-size: 2520px;
+  background-size: 3000px;
   padding-top: 7em;
 }
 
@@ -9,13 +9,14 @@ body h1, h2,h3,h4,h5,h6 {
   text-align: center;
 }
 
-button.btn-primary{
+.btn-primary{
   background-color: #62c767;
   color: white;
   font-size: 1.5em;
   border-radius: 0.2em;
   border: none;
   margin-top: 0.3em;
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 
   position: absolute;
   left: 50%;
@@ -32,3 +33,7 @@ button.btn-primary{
   box-shadow: inset 0 3px 5px rgba(0,0,0,.125);
 }
 
+.btn-primary:focus {
+  border: none;
+  background-color: #62c767;
+}
