--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
     <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
     <link rel="stylesheet" href="/styles/index.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/footer.css" type="text/css" />
 
 
 
@@ -31,9 +32,18 @@
     <main class="container">
 
       <h1>Welcome to Schoodle</h1>
+
+      <h3>The scheduling tool you'll actually use. Find a date for a meeting 2x faster</h3>
+
       <a href="/newevent" class="next">Schedule an event</a>
 
+
+
   </main>
+
+    <footer>
+      <% include ./partials/_footer %>
+    </footer>
 
   </body>
 </html>
