--- a/views/partials/_nav.ejs
+++ b/views/partials/_nav.ejs
@@ -5,6 +5,6 @@
     <nav id="nav-bar">
       <img class="logo" src="/images/logo.png">
       <span class="header fixed">Schoodle</span>
-      <a id="contact"><i class="fas fa-paper-plane"></i> Contact us</a>
+      <a id="contact" href="/contact"><i class="fas fa-paper-plane"></i> Contact us </a>
     </nav>
 
