--- a/public/styles/dates.css
+++ b/public/styles/dates.css
@@ -2,6 +2,9 @@ form {
   text-align: center;
 }
 
+h2 {
+  margin-top: 2em;
+}
 ul {
   padding-inline-start: 0;
   text-align: center;
@@ -17,4 +20,16 @@ ul {
 .btn-primary {
   margin-top: 2.5em;
   width: 20%;
+}
+
+#hidden {
+  display: none;
+  font-size:17px;
+  text-align:center;
+  margin-top:6.5em;
+  color:#254751;
+
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, 0);
 }
