--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -9,12 +9,20 @@
   width: 100%;
 }
 
+h1 {
+  font-weight: bolder;
+}
+h3 {
+  margin-top: 2em;
+}
+
 .next {
   background-color: #62c767;
   font-size: 2em;
   color: white;
   border-radius: 0.15em;
   padding: 0.3em 0.7em;
+  margin-top: 2em;
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 
   position: absolute;
