--- a/views/newevent.ejs
+++ b/views/newevent.ejs
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
     <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
     <link rel="stylesheet" href="/styles/newevent.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/footer.css" type="text/css" />
 
     <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
     <script type="text/javascript" src="/scripts/app.js"></script>
@@ -26,10 +27,10 @@
 
       <h2>What’s the occasion?</h2>
 
-        <form action="/newevent" method="POST">
+        <form action="/newevent" method="POST" onsubmit='inputCheck(event)'>
           <h4> Title </h4>
           <a><i class="fas fa-feather fa-2x"></i>
-            <input class="form-control" type="text" name="title" placeholder="Title"style="width:30em; display: inline-block">
+            <input id='b' class="form-control" type="text" name="title" placeholder="Title"style="width:30em; display: inline-block">
           </a>
           <h4> Description</h4>
           <a><i class="fas fa-edit fa-2x"></i>
@@ -41,16 +42,38 @@
           </a>
           <h4> Name</h4>
           <a><i class="fas fa-user fa-2x"></i>
-            <input class="form-control" type="text" name="name" placeholder="Name"style="width:30em; display: inline-block">
+            <input id='c' class="form-control" type="text" name="name" placeholder="Name"style="width:30em; display: inline-block">
           </a>
           <h4> E-mail</h4>
           <a><i class="fas fa-envelope-open-text fa-2x"></i>
-            <input class="form-control" type="text" name="email" placeholder="E-mail address"style="width:30em; display: inline-block">
+            <input id='d' class="form-control" type="text" name="email" placeholder="E-mail address"style="width:30em; display: inline-block">
           </a>
 
           <ul><button id='a' type="submit" class="btn btn-primary">Create Event</button></ul>
         </form>
 
+         <span id="hidden">Please fill all required fields</span>
+
+          <script>
+            function inputCheck(event) {
+              let b= document.getElementById('a').value;
+              let c= document.getElementById('b').value;
+              let d= document.getElementById('c').value;
+              if (d == '' || b == '' || c == ''){
+                event.preventDefault();
+                let text = document.getElementById("hidden");
+                $(text).slideDown("slow").fadeOut(5000);
+
+                return false;
+              }
+            }
+          </script>
+
       </main>
+
+      <footer>
+        <% include ./partials/_footer %>
+      </footer>
+
   </body>
 </html>
