--- a/views/times.ejs
+++ b/views/times.ejs
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/vendor/border-box.css" type="text/css" />
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
     <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/footer.css" type="text/css" />
     <link rel="stylesheet" href="/styles/times.css" type="text/css" />
 
     <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
@@ -51,5 +52,10 @@
       newInput.setAttribute('class', "time form-control");
     }
     </script>
+
+    <footer>
+      <% include ./partials/_footer %>
+    </footer>
+
   </body>
 </html>
