Making a proper voting page.

--- a/views/option.ejs
+++ b/views/option.ejs
@@ -12,6 +12,9 @@
   </head>
 
   <body>
+  <input id="viewingUser" type="hidden" class="<%=viewingUser%>">
+  <input id="eventSerial" type="hidden" class="<%=targetEvent%>">
+
 
   <h1>Schoodle event</h1>
   <h2>Event Title</h2>
