--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -2,6 +2,7 @@ body {
   background-image: url(../images/events.png);
   background-size: 3000px;
   padding-top: 7em;
+  margin-bottom: 7em;
 }
 
 body h1, h2,h3,h4,h5,h6 {
