--- a/views/url.ejs
+++ b/views/url.ejs
@@ -23,7 +23,7 @@
 
     <h1>Thank you for using Schoodle</h1>
       <h3>Here is the url to share with your friends!</h3>
-      <input class="form-control" type="text" value="http://localhost:8080/events/vote/<%= url%>">
+      <input id='myInput' class="form-control" type="text" value="http://localhost:8080/events/vote/<%= url%>">
       <button class="btn-primary" onclick="myFunction()"><i class="fas fa-copy"></i>Copy url </button>
 
 
