--- a/views/dates.ejs
+++ b/views/dates.ejs
@@ -37,8 +37,8 @@
         <input hidden autocomplete="false">
 
         <h2>Days</h2>
-        <h3>Pick the dates you would like to choose</h3>
-        <ul><input id='b' type="text" class="form-control date" placeholder="Pick the date" name = <%= id[0].events_id %>></ul>
+        <h4>Pick the dates you would like to choose</h4>
+        <ul><input id='b' type="text" class="form-control date" placeholder="Pick the date(s)" name = <%= id[0].events_id %>></ul>
       <ul><button type="submit" class="btn btn-primary" >continue</button></ul>
 
 
