--- a/views/participant.ejs
+++ b/views/participant.ejs
@@ -3,25 +3,38 @@
   <head>
     <title>Home Page</title>
 
-    <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <link rel="stylesheet" href="/vendor/border-box.css" type="text/css" />
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/footer.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/participant.css" type="text/css" />
 
     <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
     <script type="text/javascript" src="/scripts/app.js"></script>
   </head>
 
   <body>
+
+    <header>
+      <% include ./partials/_nav %>
+    </header>
+
     <h1>Welcome to Schoodle</h1>
     <h3>Your Friend wants you to come to an event</h3>
-    <p>We need some information so that you can help decide the times!</p>
+    <h4>We need some information so that you can help decide the times!</h4>
 
     <form action="/newuser" method="POST">
-        <input class="form-control" type="text" name="name" placeholder="Your Name" style="width: 300px">
-        <input class="form-control" type="text" name="email" placeholder="Your Email" style="width: 300px">
+        <input class="form-control" type="text" name="name" placeholder="Your Name" >
+        <input class="form-control" type="text" name="email" placeholder="Your E-mail" >
         <input type="hidden" name="sharedurl" value="<%=sharedurl%>">
-        <button type="submit">Get Started</button>
+        <button class="btn-primary" type="submit">Get Started</button>
     </form>
+
+    <footer>
+      <% include ./partials/_footer %>
+    </footer>
 
   </body>
 </html>
