--- a/views/url.ejs
+++ b/views/url.ejs
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/vendor/border-box.css" type="text/css" />
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
     <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/footer.css" type="text/css" />
     <link rel="stylesheet" href="/styles/url.css" type="text/css" />
 
     <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
@@ -22,9 +23,10 @@
 
 
     <h1>Thank you for using Schoodle</h1>
-      <h3>Here is the url to share with your friends!</h3>
+      <h4>Here is the url to share with your friends!</h4>
       <input id='myInput' class="form-control" type="text" value="http://localhost:8080/events/vote/<%= url%>">
       <button class="btn-primary" onclick="myFunction()"><i class="fas fa-copy"></i>Copy url </button>
+      <a href="/events/vote/<%= url%>"><button class="vote btn-primary"><i class="fas fa-poll"></i>My event</button></a>
 
 
       <script>
@@ -34,5 +36,9 @@
           document.execCommand("copy");
         }
         </script>
+
+        <footer>
+          <% include ./partials/_footer %>
+        </footer>
   </body>
 </html>
