--- a/views/times.ejs
+++ b/views/times.ejs
@@ -40,7 +40,7 @@
         </button>
     <% } %>
 
-    <button type="submit" class="btn btn-primary">continue</button>
+    <button type="submit" class="btn btn-primary">finish</button>
   </form>
 
 
