--- a/views/partials/_footer.ejs
+++ b/views/partials/_footer.ejs
@@ -4,6 +4,12 @@
         <!-- Top footer bar (fixed) -->
     <footer id="footer-bar">
 
-      <span >Schoodle</span>
+      <span >@The footer is too empty, let's write something here, and some icons</span>
+
+      <i class="fab fa-twitter"></i>
+      <i class="fab fa-facebook-square"></i>
+      <i class="fab fa-snapchat-ghost"></i>
+      <i class="fab fa-linkedin-in"></i>
+      <i class="fab fa-pinterest"></i>
 
     </footer>
