--- a/views/partials/_nav.ejs
+++ b/views/partials/_nav.ejs
@@ -5,6 +5,7 @@
     <nav id="nav-bar">
       <img class="logo" src="/images/logo.png">
       <span class="header fixed">Schoodle</span>
-      <a id="contact" href="/contact"><i class="fas fa-paper-plane"></i> Contact us </a>
+      <span id="contact" href="/contact"><i class="fas fa-paper-plane"></i> Contact us </span>
+      <span id="signin" href="#"><i class="fas fa-user-plus"></i> Sign in </span>
     </nav>
 
