--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -37,3 +37,18 @@
   color: black;
   text-decoration: none;
 }
+
+#signin {
+  float: right;
+  margin-right: 45px;
+  background-color: transparent;
+  color: grey;
+  font-size: 1.5em;
+  line-height: 80px;
+  text-decoration: none;
+}
+
+#signin:hover {
+  cursor: pointer;
+  color: black;
+}
