minor css change

--- a/views/option.ejs
+++ b/views/option.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Home Page</title>
+    <title>Event poll</title>
 
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
@@ -27,9 +27,9 @@
   <main>
     <h2>Event</h2>
     <div class="title"></div>
-    <h2>Description</h2>
+    <h3>Description</h3>
     <div class="description"></div>
-    <h2>Where</h2>
+    <h3>Where</h3>
     <div class="location"></div>
   </main>
   <div class="voteBox"></div>
