--- a/public/styles/option.css
+++ b/public/styles/option.css
@@ -1,5 +1,5 @@
 main {
-  width: 40%;
+  width: 30%;
   background-color: #efefef;
   padding: 1em 2em;
   margin: 2em 3em;
@@ -14,10 +14,13 @@ button {
   margin: 0 3px;
   font-size: 1.5em;
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
-
+}
+h2 {
+  text-align: Left;
+  font-weight: bold;
 }
 
-h2 {
+h3 {
   text-align: Left;
   font-weight: bold;
 }
