--- a/views/newevent.ejs
+++ b/views/newevent.ejs
@@ -29,25 +29,25 @@
 
         <form action="/newevent" method="POST" onsubmit='inputCheck(event)'>
           <h4> Title </h4>
-          <a><i class="fas fa-feather fa-2x"></i>
+          <div><i class="fas fa-feather fa-2x"></i>
             <input id='b' class="form-control" type="text" name="title" placeholder="Title"style="width:80%; display: inline-block">
-          </a>
+          </div>
           <h4> Description</h4>
-          <a><i class="fas fa-edit fa-2x"></i>
+          <div><i class="fas fa-edit fa-2x"></i>
             <input class="form-control" type="text" name="description" placeholder="Description (optional)"style="width:80%; display: inline-block">
-          </a>
+          </div>
           <h4> Location</h4>
-          <a><i class="fas fa-map-pin fa-2x"></i>
+          <div><i class="fas fa-map-pin fa-2x"></i>
             <input class="form-control" type="text" name="location" placeholder="Location (optional)"style="width:80%; display: inline-block">
-          </a>
+          </div>
           <h4> Name</h4>
-          <a><i class="fas fa-user fa-2x"></i>
+          <div><i class="fas fa-user fa-2x"></i>
             <input id='c' class="form-control" type="text" name="name" placeholder="Name"style="width:80%; display: inline-block">
-          </a>
+          </div>
           <h4> E-mail</h4>
-          <a><i class="fas fa-envelope-open-text fa-2x"></i>
+          <div><i class="fas fa-envelope-open-text fa-2x"></i>
             <input id='d' class="form-control" type="text" name="email" placeholder="E-mail address"style="width:80%; display: inline-block">
-          </a>
+          </div>
 
           <ul><button id='a' type="submit" class="btn btn-primary">Create Event</button></ul>
         </form>
